--- a/config.php.ini
+++ b/config.php.ini
@@ -19,5 +19,8 @@ test => test
 */
 const ENV = "dev";
 
+// chemin absolu du projet
+const PROJECT_DIRECTORY = __DIR__ ;
+
 // mail pour webdev-cf2m.be
 const MAIL_SERVER = "***@***.be";
