--- a/test/Michael/07-twig-public-view/public/.htaccess
+++ b/test/Michael/07-twig-public-view/public/.htaccess
@@ -1,11 +1,11 @@
 Options +FollowSymlinks
 RewriteEngine on
 
-# Existing conditions to ensure the request is not for a real file or directory
+# Si le fichier demandé est un fichier ou un répertoire réel, ne pas réécrire
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 
-# New rule to rewrite /article/hebergement-mutualise-wikipedia/ to ?route=article&slug=hebergement-mutualise-wikipedia
+# Nouvelle règle de réécriture /article/hebergement-mutualise-wikipedia/ to ?route=article&slug=hebergement-mutualise-wikipedia
 
 RewriteRule ^article/([a-zA-Z0-9-]+)/?$ ./index.php?route=article&slug=$1 [L,QSA]
 
